syntax = "proto3";

package todo.v1;

option go_package = "github.com/sky0621/tips-go/library_selection/communication/grpc/connect/gen/todo/v1;todov1";

message Todo {
  int32 id = 1;
  string msg = 2;
  bool completed = 3;
}

message CreateTodoRequest {
  string msg = 1;
}

message CreateTodoResponse {
  bool success = 1;
}

message GetTodoRequest {
  int32 id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message ListTodoRequest {}

message ListTodoResponse {
  repeated Todo todo_list = 1;
}

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {}
  rpc ListTodo(ListTodoRequest) returns (ListTodoResponse) {}
}
